meecast (0.9.13) unstable; urgency=low

  * Added Durovka to gismeteo.ru and foreca.com sources

 -- Vlad Vasiliev <vlad@gas.by>  Tue, 27 Nov 2014 19:31:23 +0200

meecast (0.9.12) unstable; urgency=low

  * Added Palanga(Lithuania) to weather.com, yr.no, openweathermap.org sources
  * Removed donation link
  * Added wake up internet connection for refresh weather forecast
  * Added station Poselok rudnika Kupol to gismeteo.ru source
  * Fixed problem with Denmark, Germany stations in openweathermap.org source
  * Fixed incorrect name of pressure from "Pa" to "kPa"
  * Updated Catalan, Dutch, Finnish, Germany, Norway, Slovenian, Spanish,
    Italian, Czech, Danish translations

 -- Vlad Vasiliev <vlad@gas.by>  Tue, 25 Nov 2014 19:31:23 +0200

meecast (0.9.10) unstable; urgency=low

  * Added translation string for gismeteo.ru
  * Updated Slovenian, Italian, Swedish translations
  * Changed unit mi/h to mph

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 27 Aug 2014 10:31:23 +0200 

meecast (0.9.9) unstable; urgency=low

  * Fixed problem with USA like style time for last update, sunrise, sunset
    and hourly information 
  * Added stations Lignano Pineta, Lignano Riviera, Lignano Sabbiadoro (Italy) to
    weather.com, foreca.com source  
  * Added stations Lignano Sabbiadoro (Italy) to gismeteo.ru source  
  * Added all stations from Regione Autonoma Friuli Venezia Giulia to
    openwearthermap.org source
  * Added station Cesena, ER, Italy to weather.com, openweathermap.com source  
  * Added many stations from Italy to yr.no source
  * Updated Finnish, Germany translations

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 27 Aug 2014 10:31:23 +0200

meecast (0.9.8) unstable; urgency=low

  * Added Sunrise and sunset for fmi.fi source
  * Added Precipitation
  * Added Precipitation rate
  * Added Dewpoint
  * Added dewpoint for weather.com source
  * Updated Catalan, Spanish, Russian, Dannish translations

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 13 Aug 2014 23:31:23 +0200
