@@ -10,8 +10,8 @@ import os
 import re
 import string
 import zipfile
-country = "Germany"
-country_code = "DE"
+country = "India"
+country_code = "IN"
                 
 
 def normalizing4 (source):
@@ -115,8 +115,8 @@ for line in fh.readlines():
 #    print "Station %s" %(line)
 #    if (pattern[14] == "PPLA" or pattern[14] == "PPLA2" or pattern[14] == "PPLC" or pattern[14] == "PPL"):    
     if (pattern[14] == "PPLA" or pattern[14] == "PPLA2" or pattern[14] == "PPLA3" or pattern[14] == "PPLC" or pattern[14] == "PPL"):
-        print "%s %s" %(pattern[4], pattern[28]) 
-        if (pattern[20] != "" and int(pattern[28]) >= 10000):
+#        print "%s %s" %(pattern[4], pattern[28]) 
+        if (pattern[20] != "" and int(pattern[28]) >= 80000):
             if (regions_name.get(pattern[20]) == None):
                 continue
             fixed_regions_name = urllib.quote(regions_name[pattern[20]])
