@@ -1,6 +1,7 @@
 meecast (0.9.13) unstable; urgency=low
 
   * Added Durovka to gismeteo.ru and foreca.com sources
+  * Added India to Openweathermap.org
 
  -- Vlad Vasiliev <vlad@gas.by>  Tue, 27 Nov 2014 19:31:23 +0200
 
